syntax = "proto3";

package rs.tauri.devtools.log;

import "google/protobuf/timestamp.proto";
import "common.proto";

message Update {
    // A list of new log events that happened since the last `Update` was
    // sent.
    //
    // If this is empty, no new events were emitted.
    repeated Event new_events = 1;
    // A count of how many log events were not
    // recorded because the application's event buffer was at capacity.
    //
    // If everything is working normally, this should be 0. If it is greater
    // than 0, that may indicate that some data is missing from this update, and
    // it may be necessary to increase the number of events buffered by the
    // application to ensure that data loss is avoided.
    //
    // If the application's instrumentation ensures reliable delivery of events,
    // this will always be 0.
    uint64 dropped_events = 2;
}

message Event {
    // Identifier for metadata describing static characteristics of all spans originating
    // from that callsite, such as its name, source code location, verbosity level, and
    // the names of its fields.
    common.MetaId metadata_id = 1;
    // User-defined key-value pairs of arbitrary data that describe the context the span represents,
    repeated common.Field fields = 2;
    // Timestamp for the span.
    google.protobuf.Timestamp at = 3;
}
